--- a/app/src/main/res/layout/poplar_item_layout.xml
+++ b/app/src/main/res/layout/poplar_item_layout.xml
@@ -1,47 +1,53 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="160dp"
-    android:layout_height="140dp"
-    android:layout_marginRight="10dp"
-    android:orientation="vertical">
-
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:background="@android:color/white">
 
     <ImageView
+        android:id="@+id/room_image"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.8"
+        android:layout_height="180dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="3dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/dhaka" />
+        android:src="@drawable/dummy_image2" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dhaka"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
+        android:layout_below="@+id/room_image"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bangladesh" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:text="Dhaka"
+            android:textColor="#242529" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title"
+            android:layout_marginTop="@dimen/margin_2"
+            android:ellipsize="end"
+            android:gravity="bottom"
+            android:maxLines="1"
+            android:text="Gulshan, Dhaka"
+            android:textSize="@dimen/text_size_12" />
 
+    </LinearLayout>
 
-    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_marginRight="10dp"--><!--android:layout_height="match_parent">-->
-
-    <!--<android.support.constraint.Guideline--><!--android:id="@+id/ver_guideline"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:orientation="vertical"--><!--app:layout_constraintGuide_percent="0.40" />-->
-
-    <!--<android.support.constraint.Guideline--><!--android:id="@+id/hor_guideline"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:orientation="horizontal"--><!--app:layout_constraintGuide_percent="0.20" />-->
-
-    <!--<LinearLayout--><!--android:layout_width="0dp"--><!--android:layout_height="0dp"--><!--android:layout_marginStart="0dp"--><!--android:layout_marginTop="0dp"--><!--android:layout_marginEnd="0dp"--><!--android:layout_marginBottom="0dp"--><!--android:orientation="vertical"--><!--app:layout_constraintBottom_toTopOf="@+id/hor_guideline"--><!--app:layout_constraintEnd_toStartOf="@+id/ver_guideline"--><!--app:layout_constraintStart_toStartOf="parent"--><!--app:layout_constraintTop_toTopOf="parent">-->
-
-    <!--<ImageView--><!--android:layout_width="match_parent"--><!--android:layout_height="0dp"--><!--android:layout_weight="0.6"--><!--android:scaleType="centerCrop"--><!--android:src="@drawable/dhaka" />-->
-
-    <!--<TextView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Dhaka"--><!--android:textColor="@android:color/black"--><!--android:textStyle="bold" />-->
-
-    <!--<TextView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Bangladesh" />-->
-
-    <!--</LinearLayout>-->
-
-    <!--</android.support.constraint.ConstraintLayout>-->
+</RelativeLayout>
