--- a/app/src/main/res/layout/city_item_verical.xml
+++ b/app/src/main/res/layout/city_item_verical.xml
@@ -2,12 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?selectableItemBackground"
+    android:background="@android:color/white"
+    android:foreground="?selectableItemBackground"
+    android:paddingStart="16dp"
     android:paddingTop="16dp"
+    android:paddingEnd="16dp"
     android:paddingBottom="16dp">
 
     <TextView
-        android:id="@+id/place_name"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
