--- a/app/src/main/res/layout/recent_search_item_layout.xml
+++ b/app/src/main/res/layout/recent_search_item_layout.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="80dp"
+    android:background="@android:color/white"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <mastersunny.rooms.utils.CircleImageView
         android:id="@+id/img_place"
