--- a/app/src/main/res/layout/room_search_fragment_2.xml
+++ b/app/src/main/res/layout/room_search_fragment_2.xml
@@ -18,6 +18,7 @@
         android:paddingBottom="16dp">
 
         <TextView
+            android:id="@+id/tv_city_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
