--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -41,16 +41,16 @@
                     android:layout_height="210dp"
                     android:layout_marginLeft="@dimen/margin_3"
                     android:layout_marginRight="@dimen/margin_3"
-                    android:background="@color/colorPrimaryDark"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/dummy_image2" />
 
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_16"
-                    android:layout_marginRight="@dimen/margin_16"
                     android:layout_marginTop="@dimen/margin_16"
+                    android:layout_marginRight="@dimen/margin_16"
                     android:ellipsize="end"
                     android:includeFontPadding="false"
                     android:maxLines="1"
@@ -64,8 +64,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/title"
                     android:layout_marginLeft="@dimen/margin_16"
-                    android:layout_marginRight="@dimen/margin_16"
                     android:layout_marginTop="@dimen/margin_2"
+                    android:layout_marginRight="@dimen/margin_16"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="address"
@@ -78,18 +78,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
+                android:paddingTop="@dimen/margin_16"
                 android:paddingRight="@dimen/margin_16"
-                android:paddingTop="@dimen/margin_16">
+                android:paddingBottom="@dimen/margin_16">
 
                 <ImageView
                     android:id="@+id/map_layout"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:background="@color/colorPrimary"
-                    android:padding="@dimen/margin_20"
-                    app:srcCompat="@drawable/ic_map_big" />
+                    app:srcCompat="@drawable/ic_google" />
 
                 <TextView
                     android:id="@+id/room_details"
@@ -100,23 +98,6 @@
                     android:maxLines="4"
                     android:text="" />
 
-                <TextView
-                    android:id="@+id/female_friendly_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_below="@+id/room_details"
-                    android:layout_marginLeft="@dimen/margin_16"
-                    android:layout_marginTop="@dimen/margin_5"
-                    android:layout_toRightOf="@+id/map_layout"
-                    android:background="#ff1744"
-                    android:paddingBottom="@dimen/margin_3"
-                    android:paddingLeft="@dimen/margin_10"
-                    android:paddingRight="@dimen/margin_10"
-                    android:text="Female Friendly"
-                    android:textColor="@color/white"
-                    android:visibility="gone" />
-
             </RelativeLayout>
 
             <LinearLayout
@@ -126,11 +107,11 @@
                 android:layout_marginTop="@dimen/margin_10"
                 android:background="@color/white"
                 android:orientation="horizontal"
-                android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
-                android:paddingRight="@dimen/margin_16"
                 android:paddingTop="@dimen/margin_16"
-                android:visibility="gone">
+                android:paddingRight="@dimen/margin_16"
+                android:paddingBottom="@dimen/margin_16"
+                android:visibility="visible">
 
                 <LinearLayout
                     android:id="@+id/wifi_layout"
@@ -141,7 +122,7 @@
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="@dimen/margin_10"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -166,7 +147,7 @@
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="@dimen/margin_10"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -190,12 +171,36 @@
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="@dimen/margin_10"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/ic_air_conditioner" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/margin_1"
+                        android:text="AC"
+                        android:textSize="@dimen/text_size_13" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/parking_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?selectableItemBackground"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:padding="@dimen/margin_10"
+                    android:visibility="visible">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_parking" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -214,11 +219,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:background="@color/white"
-                android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
-                android:paddingRight="@dimen/margin_16"
                 android:paddingTop="@dimen/margin_16"
-                android:visibility="gone">
+                android:paddingRight="@dimen/margin_16"
+                android:paddingBottom="@dimen/margin_16"
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/lunch_icon"
@@ -232,6 +237,7 @@
                     android:id="@+id/lunch_cost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/margin_16"
                     android:layout_toRightOf="@id/lunch_icon"
                     android:text="Add lunch / Dinner BDT 120" />
@@ -251,11 +257,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:background="@color/white"
-                android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
-                android:paddingRight="@dimen/margin_16"
                 android:paddingTop="@dimen/margin_16"
-                android:visibility="gone">
+                android:paddingRight="@dimen/margin_16"
+                android:paddingBottom="@dimen/margin_16"
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/transport_icon"
@@ -269,6 +275,7 @@
                     android:id="@+id/transport_cost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/margin_16"
                     android:layout_toRightOf="@id/transport_icon"
                     android:text="Transport Facilities BDT 120" />
@@ -288,10 +295,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:background="@color/white"
-                android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
+                android:paddingTop="@dimen/margin_16"
                 android:paddingRight="@dimen/margin_16"
-                android:paddingTop="@dimen/margin_16">
+                android:paddingBottom="@dimen/margin_16">
 
                 <TextView
                     android:id="@+id/guest_text"
@@ -312,8 +319,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginBottom="@dimen/margin_16"
                     android:layout_marginTop="@dimen/margin_16"
+                    android:layout_marginBottom="@dimen/margin_16"
                     android:orientation="horizontal">
 
                     <Button
@@ -353,10 +360,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:background="@color/white"
-                android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
+                android:paddingTop="@dimen/margin_16"
                 android:paddingRight="@dimen/margin_16"
-                android:paddingTop="@dimen/margin_16">
+                android:paddingBottom="@dimen/margin_16">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -370,7 +377,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text=""
+                    android:text="BDT 100"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/text_size_18" />
 
@@ -381,10 +388,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="@dimen/margin_20"
                 android:layout_marginLeft="@dimen/margin_20"
-                android:layout_marginRight="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_16"
+                android:layout_marginRight="@dimen/margin_20"
+                android:layout_marginBottom="@dimen/margin_20"
                 android:background="@drawable/button_selector"
                 android:text="Book Room"
                 android:textAllCaps="false"
