--- a/app/src/main/res/layout/room_search_fragment_2.xml
+++ b/app/src/main/res/layout/room_search_fragment_2.xml
@@ -7,10 +7,12 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/all_locality_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@android:color/white"
+        android:foreground="?selectableItemBackground"
         android:orientation="horizontal"
         android:paddingStart="16dp"
         android:paddingTop="16dp"
