--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -3,6 +3,6 @@
 
     <item android:drawable="@color/grey_lite" android:state_selected="true"></item>
     <item android:drawable="@color/grey_lite" android:state_pressed="true"></item>
-    <item android:drawable="@color/colorAccent"></item>
+    <item android:drawable="@color/slycalendar_defSelectedColor"></item>
 
 </selector>
