--- a/app/src/main/res/layout/recent_search_item_layout.xml
+++ b/app/src/main/res/layout/recent_search_item_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:background="@android:color/white"
+    android:foreground="?selectableItemBackground"
     android:paddingStart="16dp"
     android:paddingEnd="16dp">
 
