--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196f3</color>
-    <color name="colorPrimaryDark">#1976d2</color>
-    <color name="colorAccent">#6e7fee</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#33232323</color>
+    <color name="colorAccent">#FF0000</color>
     <color name="white">#ffffff</color>
     <color name="black_tranparent_20">#33232323</color>
     <color name="transparent_100">#00000000</color>
