working on home page

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,5 +40,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="logo_w_h">100dp</dimen>
     <dimen name="profile_cover_img_height">180dp</dimen>
+    <dimen name="spacing">4dp</dimen>
 
 </resources>
