--- a/app/src/main/res/layout/deal_item_layout.xml
+++ b/app/src/main/res/layout/deal_item_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.8"
         android:scaleType="centerCrop"
-        android:src="@drawable/dhaka" />
+        android:src="@drawable/deal1" />
 
     <TextView
         android:layout_width="wrap_content"
